[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icpquery-mcp"
version = "0.1.0"
description = "Python MCP server for querying MIIT ICP registration and blacklist information."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "httpx[socks]>=0.27.0",
  "mcp[cli]>=1.28.1",
  "pillow>=10.0.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
]

[project.scripts]
icpquery-mcp = "icpquery_mcp.server:main"
icpquery = "icpquery_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
